# twitch_message

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  deny.toml
.github/workflows/: ci.yml
examples/: .example.env  bot.rs  multi_thread.rs  simple.rs  tls.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: badge_fuzz.rs
src/: badges.rs  color.rs  emotes.rs  encode.rs  error.rs  escape.rs  into_static.rs  lib.rs  lock.rs  message.rs  message_kind.rs  messages.rs  owned.rs  parse.rs  ping_tracker.rs  prefix.rs  tags.rs  test_util.rs  typed_messages.rs
src/encode/: capability.rs  fmt.rs  io.rs  join.rs  part.rs  ping.rs  pong.rs  privmsg.rs  quit.rs  raw.rs  register.rs  whisper.rs
src/messages/: capability.rs  clear_chat.rs  clear_msg.rs  global_user_state.rs  host_target.rs  irc_ready.rs  join.rs  notice.rs  part.rs  ping.rs  pong.rs  priv_msg.rs  privmsg.rs  ready.rs  reconnect.rs  room_state.rs  twitch_message.rs  user_notice.rs  user_state.rs  whisper.rs
xtask/: Cargo.toml
xtask/src/: main.rs
