[package]
name          = "twitch_message"
version       = "0.1.1"
edition       = "2021"
license       = "0BSD"
description   = "A parser for Twitch.tv chat messages"
keywords      = ["twitch"]
repository    = "https://github.com/museun/twitch_message"

# TODO find the MSRV
# rust-version = "1.66"

[dependencies]
hashbrown   = { version = "0.13.2", optional = true }
parking_lot = { version = "0.12.1", optional = true }
serde       = { version = "1.0.152", features = ["derive"], optional = true }

[features]
default     = ["std", "ping"]
sync        = []
ping        = []
std         = ["ping"]
serde       = ["dep:serde", "hashbrown/serde"]
hashbrown   = ["dep:hashbrown"]
parking_lot = ["dep:parking_lot"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[[example]]
name = "simple"
required-features = ["std", "ping"]

[dev-dependencies]
simple_env_load = "0.2.0"
